# World_Imaker

./: BLANK_README.md  CMakeLists.txt  README.md  SDLtemplate.cpp  cubeSauv.cpp  exemple_cube.cpp  exemple_cube2.cpp  exemple_cubeClass.cpp  exemple_cubeMultipleTex.cpp  exemple_cubeTex.cpp  exemple_cubeVertices.cpp  exemple_maison.cpp  exemple_triangleTex.cpp  exo1_shaders.cpp  exo6_buffers.cpp  exo6_disque.cpp  foo.cpp
WI_V1/: CMakeLists.txt  exemple_camera.cpp  exemple_camera2.cpp  exemple_cube.cpp  exemple_cubeArray.cpp  exemple_cubeArrayTransform.cpp  exemple_cubeAssimp.cpp  exemple_cubeAssimp2.cpp  exemple_cubeCamera.cpp  exemple_cubeClass.cpp  exemple_cubeCursor.cpp  exemple_cubeCursor2.cpp  exemple_cubeCursor3.cpp  exemple_cubeCursor4.cpp  exemple_cubeGrid.cpp  exemple_cubeLight.cpp  exemple_cubeLight2.cpp  exemple_cubeLight3.cpp  exemple_cubeLight4.cpp  exemple_cubeLight5.cpp  exemple_cubeMultipleTex.cpp  exemple_cubeOBJ.cpp  exemple_cubeOBJ2.cpp  exemple_cubeOBJ3.cpp  exemple_cubeOBJ4.cpp  exemple_cubeOBJ5.cpp  exemple_cubeOBJ6.cpp  exemple_cubeTex.cpp  exemple_imGui.cpp  exemple_lumiere.cpp  exemple_textures.cpp  main.cpp  main2.cpp  test.cpp
WI_V1/shaders/: color2D.fs.glsl  color2D.vs.glsl  cubeGeneralLight.fs.glsl  cubeLight.fs.glsl  cubeLightPoint.fs.glsl  cubeOBJ2.fs.glsl  cubeOBJ2.vs.glsl  cubeTest.fs.glsl  cubeTest.vs.glsl  cubeTexture.fs.glsl  cubeTexture.vs.glsl  multiTex3D.fs.glsl  multiTex3DFreeFly.fs.glsl  normals.fs.glsl  tex2D.vs.glsl  tex3D.fs.glsl  tex3D2.fs.glsl  tex3DFreeFly.fs.glsl
backup/: backup.txt  myScene.txt  parc.txt  save1.txt  test_light.txt  toto.txt
glimac/include/glimac/: Controls.hpp  Cube.hpp  CubeList.hpp  Cursor.hpp  FilePath.hpp  FreeFlyCamera.hpp  Image.hpp  Light.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  Texture.hpp  TrackballCamera.hpp  common.hpp  objloader.hpp  stb_image.h  text.hpp
glimac/include/glimac/3D/: mesh.h  model.h  shader.h
glimac/src/: Controls.cpp  Cube.cpp  CubeList.cpp  Cursor.cpp  FreeFlyCamera.cpp  Image.cpp  Light.cpp  Program.cpp  SDLWindowManager.cpp  Shader.cpp  Texture.cpp  objloader.cpp  text.cpp  tiny_obj_loader.cpp  tiny_obj_loader.h
rbf/: bump.txt  default.txt  gaussian.txt  inverse_multiquadric.txt  inverse_multiquadric_test.txt  inverse_quadratic.txt  inverse_quadratic_test.txt  multiquadric.txt  thin_plate_spline.txt
shaders/: 3DFreeFly.vs.glsl  cubeColor.fs.glsl  cubeTexture.fs.glsl  cubeTexture.vs.glsl  directionallight.fs.glsl  grey2d.fs.glsl  tex2D.fs.glsl
src/: CMakeLists.txt  main.cpp  main2.cpp  main3D.cpp
